--- a/index.html
+++ b/index.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Pedro Azevedo</title>
+    <title>Meu Portfólio</title>
+    <!-- Link para o arquivo de estilos -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Bem-vindo ao meu portifólio!</h1>
+
+    <!-- Cabeçalho do site -->
+    <header>
+        <h1>Seu Nome</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Seção "Sobre Mim" -->
+    <section id="sobre">
+        <h2>Sobre Mim</h2>
+        <p></p>
+    </section>
+
+    <!-- Seção de Projetos -->
+    <section id="projetos">
+        <h2>Projetos</h2>
+        <div class="projeto">
+            <img src="assets/img/projeto1.png" alt="Projeto 1">
+            <h3>Projeto 1</h3>
+            <p>Descrição do projeto 1. Este é um exemplo de trabalho desenvolvido.</p>
+            <a href="https://github.com/seu-usuario/projeto1" target="_blank">Ver no GitHub</a>
+        </div>
+        <!-- Outros projetos podem ser adicionados da mesma forma -->
+    </section>
+
+    <!-- Seção de Habilidades -->
+    <section id="habilidades">
+        <h2>Habilidades</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </section>
+
+    <!-- Seção de Contato -->
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>E-mail: <a href="mailto:seuemail@example.com"></a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/seuperfil" target="_blank"></a></p>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>© 2024 Nome. Todos os direitos reservados.</p>
+    </footer>
+
+    <!-- Link para o arquivo de JavaScript -->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
+
