--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <!-- Cabeçalho do site -->
     <header>
-        <h1>Seu Nome</h1>
+        <h1>Pedro Henrique Azevedo</h1>
         <nav>
             <ul>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#sobre">Sobre Mim</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -54,17 +54,17 @@
     <!-- Seção de Contato -->
     <section id="contato">
         <h2>Contato</h2>
-        <p>E-mail: <a href="mailto:seuemail@example.com"></a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/seuperfil" target="_blank"></a></p>
+        <p>E-mail: <a href="phazevedo28@gmail.com"></a></p>
+        <p>LinkedIn: <a href="www.linkedin.com/in/pedro-henrique-azevedo-501300145" target="_blank"></a></p>
     </section>
 
     <!-- Rodapé -->
     <footer>
-        <p>© 2024 Nome. Todos os direitos reservados.</p>
+        <p>© 2024 Pedro Henrique Azevedo. Todos os direitos reservados.</p>
     </footer>
 
     <!-- Link para o arquivo de JavaScript -->
-    <script src="assets/js/script.js"></script>
+   <!-- <script src="assets/js/script.js"></script> -->
 </body>
 </html>
 
