--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Cabeçalho do site -->
     <header>
-        <h1>PEDRO HENRIQUE AZEVEDO</h1>
+        <h1>Pedro Henrique Azevedo</h1>
         <nav>
             <ul>
                 <li><a href="#sobre">Sobre Mim</a></li>
