--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <section id="habilidades">
         <h2>Habilidades</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>Machine Learning</li>
             <li></li>
         </ul>
     </section>
