--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <!-- Seção de Contato -->
     <section id="contato">
         <h2>Contato</h2>
-        <p>E-mail: <a href="phazevedo28@gmail.com"></a></p>
-        <p>LinkedIn: <a href="www.linkedin.com/in/pedro-henrique-azevedo-501300145" target="_blank"></a></p>
+            <p>E-mail: <a href="mailto:phazevedo28@gmail.com">phazevedo28@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/pedro-henrique-azevedo-501300145" target="_blank">pedro-henrique-azevedo</a></p>
     </section>
 
     <!-- Rodapé -->
