--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <section id="habilidades">
         <h2>Habilidades</h2>
         <ul>
+            <li>Análise de Dados</li>
+            <li>Machine Learning</li>
             <li>Python</li>
             <li>SQL</li>
-            <li>Machine Learning</li>
-            <li></li>
         </ul>
     </section>
 
